syntax = "proto3";

package booking;
option go_package = "./proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse) {
    option (google.api.http) = {
      post: "/v1/bookings"
      body: "*"
    };
  }

  rpc GetBooking(GetBookingRequest) returns (GetBookingResponse) {
    option (google.api.http) = {
      get: "/v1/bookings/{booking_id}"
    };
  }

  rpc ListUserBookings(ListUserBookingsRequest) returns (ListUserBookingsResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/bookings"
    };
  }

  rpc CancelBooking(CancelBookingRequest) returns (CancelBookingResponse) {
    option (google.api.http) = {
      delete: "/v1/bookings/{booking_id}"
    };
  }
}

message Booking {
  string id = 1;
  string user_id = 2;
  string event_id = 3;
  int32 ticket_count = 4;
  BookingStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
}

enum BookingStatus {
  BOOKING_STATUS_UNSPECIFIED = 0;
  BOOKING_STATUS_PENDING = 1;
  BOOKING_STATUS_CONFIRMED = 2;
  BOOKING_STATUS_CANCELLED = 3;
}

message CreateBookingRequest {
  string user_id = 1;
  string event_id = 2;
  int32 ticket_count = 3;
}

message CreateBookingResponse {
  Booking booking = 1;
}

message GetBookingRequest {
  string booking_id = 1;
}

message GetBookingResponse {
  Booking booking = 1;
}

message ListUserBookingsRequest {
  string user_id = 1;
}

message ListUserBookingsResponse {
  repeated Booking bookings = 1;
}

message CancelBookingRequest {
  string booking_id = 1;
}

message CancelBookingResponse {
  bool success = 1;
  string message = 2;
}